--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,12 @@
     "node": true
   },
   "parserOptions": {
-    "ecmaVersion": 8
+    "ecmaVersion": 8,
+    "sourceType": "module"
+  },
+  "extends": "eslint:recommended",
+  "rules": {
+    "no-console": "warn",
+    "import/extensions": 0
   }
 }
