--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
   },
   "extends": "eslint:recommended",
   "rules": {
-    "no-console": "warn",
+    "no-console": "off",
     "import/extensions": 0
   }
 }
