--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "filesystem"
   ],
   "dependencies": {
+    "axios": "^1.1.3",
     "cheerio": "^1.0.0-rc.12",
     "eslint": "^8.3.0",
     "jest": "^27.0.1"
-
   },
   "directories": {
     "test": "test"
