--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "axios": "^1.1.3",
     "cheerio": "^1.0.0-rc.12",
     "eslint": "^8.3.0",
-    "jest": "^27.0.1"
+    "jest": "^27.0.1",
+    "node-fetch": "^2.6.7"
   },
   "directories": {
     "test": "test"
