config: changes the name of the bin according to the readme in package.json

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "type": "commonjs",
   "bin": {
-    "mdLinks": "cli.js"
+    "md-links": "cli.js"
   },
   "engines": {
     "node": ">=16.x"
