--- a/package.json
+++ b/package.json
@@ -13,9 +13,8 @@
     "node": ">=16.x"
   },
   "scripts": {
-    "eslint": "eslint --ext .js src/ test/",
-    "pretest": "npm run eslint",
-    "test": "jest --verbose --coverage"
+    "eslint": "eslint --ext .js test/",
+    "test": "jest --verbose --coverage --watch"
   },
   "keywords": [
     "cli-app",
@@ -25,11 +24,8 @@
     "filesystem"
   ],
   "dependencies": {
-    "axios": "^1.1.3",
     "cheerio": "^1.0.0-rc.12",
-    "eslint": "^8.3.0",
-    "jest": "^27.0.1",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^2.6.7"    
   },
   "directories": {
     "test": "test"
@@ -41,5 +37,10 @@
   "bugs": {
     "url": "https://github.com/menamilochomil/CDMX013-md-links/issues"
   },
-  "homepage": "https://github.com/menamilochomil/CDMX013-md-links#readme"
+  "homepage": "https://github.com/menamilochomil/CDMX013-md-links#readme",
+  "devDependencies": {
+    "jest-fetch-mock": "^3.0.3",
+    "eslint": "^8.3.0",
+    "jest": "^27.0.1" 
+  }
 }
