config: erase the --watch in package.json

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "scripts": {
     "eslint": "eslint --ext .js test/",
-    "test": "jest --verbose --coverage --watch"
+    "test": "jest --verbose --coverage"
   },
   "keywords": [
     "cli-app",
