--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
   },
   "homepage": "https://github.com/menamilochomil/CDMX013-md-links#readme",
   "devDependencies": {
-    "eslint": "^8.3.0",
+    "eslint": "^8.27.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
     "jest": "^27.0.1"
   }
 }
